--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,37 +1,71 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">BitRate</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbar">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
+<div class="navbar">
+  <div class="row">
+    <div class="col-md-4">
+      <ul class="navbar-list">
+        <li class="navbar-item">
+          <a [routerLink]="['/']">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/collection']">Collection</a>
+        <li class="navbar-item" [routerLink]="['/collection']">Collection
+          <!--<a [routerLink]="['/collection']">Collection</a>-->
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/upload']">Upload</a>
-        </li>
-        <li>
-          <form class="form-inline my-2 my-md-0">
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search">
-          </form>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Sign In</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Create account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">En</a>
+        <li class="navbar-item">
+          <a [routerLink]="['/upload']">Upload</a>
         </li>
       </ul>
     </div>
+    <div class="col-md-4">
+      <form class="form-search">
+        <input class="input-search" type="text" placeholder="Search">
+      </form>
+    </div>
+    <div class="col-md-4">
+      <ul class="navbar">
+        <li class="navbar-item">Sign In</li>
+        <li class="navbar-item">Create account</li>
+        <li class="navbar-item">En</li>
+      </ul>
+    </div>
   </div>
-</nav>
+</div>
+
+
+
+<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+  <!--<div class="container">-->
+    <!--&lt;!&ndash;<a class="navbar-brand" href="#">BitRate</a>&ndash;&gt;-->
+
+    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">-->
+      <!--<span class="navbar-toggler-icon"></span>-->
+    <!--</button>-->
+
+    <!--<div class="collapse navbar-collapse" id="navbar">-->
+      <!--<ul class="navbar-nav col-md-4">-->
+        <!--<li class="nav-item active">-->
+          <!--<a class="nav-link" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link" [routerLink]="['/collection']">Collection</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link" [routerLink]="['/upload']">Upload</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+
+          <!--<form class="form-inline col-md-4">-->
+            <!--<input class="form-control" type="text" placeholder="Search" aria-label="Search">-->
+          <!--</form>-->
+
+        <!--<ul class="navbar-nav col-md-4">-->
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link disabled" href="#">Sign In</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link disabled" href="#">Create account</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link disabled" href="#">En</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
