--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,21 @@
 </div>
 
 
+
+
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
       <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <!--<app-popular *ngFor="let topArtists of topArtists"></app-popular>-->
     </div>
   </div>
 </div>
