--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <!--<app-popular *ngFor="let topArtists of topArtists" [artist]="topArtists"></app-popular>-->
+      <app-popular *ngFor="let track of track" [track]="track"></app-popular>
     </div>
   </div>
 </div>
