--- a/src/app/component/popular/popular.component.html
+++ b/src/app/component/popular/popular.component.html
@@ -1,12 +1,11 @@
-<div>
-
-  <div class="thumb-container">
-    <div class="thumbs">
-      <div class="artist-info">
-        <p>{{ topArtists }}</p>
-      </div>
+<div class="thumb-container">
+  <div class="thumbs">
+    <div class="artist-info">
+      <p>Top Tracks:</p>
+      <p>{{ topTracks }}</p>
     </div>
   </div>
-
-
 </div>
+
+
+
