--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("img/BG.svg");
-  background-repeat: no-repeat;
+  background: url("img/BG.svg") no-repeat;
   background-size: cover;
 }
