--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,5 @@
 body {
   margin: 0;
   padding: 0;
-  background: url("img/BG.svg") no-repeat;
-  background-size: cover;
+  background: url("img/BG.svg") top left/cover no-repeat fixed;
 }
