--- a/src/app/component/popular/popular.component.html
+++ b/src/app/component/popular/popular.component.html
@@ -1,15 +1,11 @@
 <div class="thumb-container" *ngFor="let track of topTracks">
   <div class="thumbs">
     <div class="artist-info">
+      <img src="{{ track.image[2]['#text'] }}" alt="{{ track.artist.name }}" />
       <p>Artist: {{ track.artist.name }}</p>
       <p>Track: {{ track.name }}</p>
-      <p>Track URL: {{ track.url }}</p>
-      <p>Track IMG: {{ track.image }}</p>
+      <a href="{{ track.url }}">Track URL</a>
       <hr>
     </div>
   </div>
 </div>
-
-
-
-
