--- a/src/app/component/popular/popular.component.html
+++ b/src/app/component/popular/popular.component.html
@@ -1,11 +1,13 @@
-<div class="thumb-container" *ngFor="let track of topTracks">
-  <div class="thumbs">
-    <div class="artist-info">
-      <img src="{{ track.image[2]['#text'] }}" alt="{{ track.artist.name }}" />
-      <p>Artist: {{ track.artist.name }}</p>
-      <p>Track: {{ track.name }}</p>
-      <a href="{{ track.url }}">Track URL</a>
-      <hr>
-    </div>
+<div class="container" >
+  <div class="row">
+      <div class="col-3">
+        <div class="card card-track" *ngFor="let track of topTracks">
+          <div class="card-block">
+            <img src="{{ track.image[2]['#text'] }}" alt="{{ track.artist.name }}" />
+            <p>Artist: {{ track.artist.name }}</p>
+            <a href="{{ track.url }}">{{ track.name }}</a>
+          </div>
+        </div>
+      </div>
   </div>
 </div>
