--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,5 +10,8 @@ body {
   background: url("img/BG.svg") top left/cover no-repeat fixed;
 }
 .card {
-  margin-top: 1.5rem;
+  margin-top: 20px;
+  border: 2px solid rgba(0,0,0,.125);
+  border-radius: 10px;
+  text-align: center;
 }
