--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,13 @@
 </div>
 
 <div class="container">
-
-      <router-outlet></router-outlet>
-
+  <router-outlet></router-outlet>
 </div>
+
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<app-popular class="col-3" *ngFor="let track of tracks" [track]="track"></app-popular>-->
+  <!--</div>-->
+<!--</div>-->
+
+
