--- a/src/app/component/popular/popular-list/popular-list.component.html
+++ b/src/app/component/popular/popular-list/popular-list.component.html
@@ -1,6 +1,10 @@
-<div class="container">
-  <div class="row">
-    <app-popular class="col-3" *ngFor="let track of tracks" [track]="track"></app-popular>
+<section class="chart-top-track">
+  <div class="container">
+    <div class="block">
+      <p><span>Chart Top Track</span></p>
+    </div>
+    <div class="row">
+      <app-popular class="col-3" *ngFor="let track of tracks" [track]="track"></app-popular>
+    </div>
   </div>
-</div>
-
+</section>
