--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,12 @@
 //@import "../node_modules/bootstrap/scss/bootstrap";
 //@import url(https://bootswatch.com/4/lux/bootstrap.min.css);
 //@import url(https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap-grid.min.css);
+//@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/css/bootstrap-grid.min.css);
 
 body {
   margin: 0;
   padding: 0;
-  background: url("img/BG.svg") top left/cover no-repeat fixed;
+  //background: url("img/BG.svg") top left/cover no-repeat fixed;
 }
 .card {
   margin-top: 20px;
