--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -29,3 +29,21 @@
     </ul>
   </li>
 </ul>
+
+<!--<nav class="navbar navbar-default">-->
+  <!--<div class="container-fluid">-->
+      <!--<div>-->
+        <!--<a [routerLink]="['/']" class="navbrand-brand">Bitrate</a>-->
+      <!--</div>-->
+      <!--<ul class="nav navbar-nav">-->
+        <!--<li><a [routerLink]="['/']">Home</a></li>-->
+        <!--<li><a [routerLink]="['/collection']">Collection</a></li>-->
+        <!--<li><a [routerLink]="['/upload']">Upload</a></li>-->
+      <!--</ul>-->
+
+      <!--<ul class="nav navbar-nav">-->
+        <!--<li *ngIf="!authenticated"><a (click)="login()">Login</a></li>-->
+        <!--<li *ngIf="authenticated"><a (click)="logout()">Logout</a></li>-->
+      <!--</ul>-->
+  <!--</div>-->
+<!--</nav>-->
