--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,5 +1,3 @@
-
-
 <section class="login-container">
   <h1>Login to Account</h1><br>
   <form autocomplete="off" novalidate [formGroup]="form" (submit)="login()">
@@ -11,9 +9,10 @@
   <div class="login-help">
     <a href="#">Register</a> - <a href="#">Forgot Password</a>
   </div>
+  <div class="login-help">
+    <button (click)="loginWithGoogle()">Login with Google</button>
+  </div>
 </section>
-
-
 
 <a href="https://www.facebook.com/v3.0/dialog/oauth?
   client_id=615550948797320&
@@ -21,5 +20,6 @@
   redirect_uri=http://localhost:4200/facebook/auth" class="button">Sign In with Facebook</a>
 
 
+<p>audit user</p>
 
-
+{{ user$ | async | json }}
