--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  //background: url("img/BG.svg") top left/cover no-repeat fixed;
+  background: url("img/BG.svg") top left/cover no-repeat fixed;
 }
 .card {
   margin-top: 20px;
