--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,15 @@
   <div class="row">
     <div class="col-md-12">
       <app-navbar></app-navbar>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
     </div>
   </div>
-</div>
+</div> -->
