--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+<!--<div class="container">-->
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
       <app-navbar></app-navbar>
       <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
 
 <!-- <div class="container">
   <div class="row">
