--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,73 +1,251 @@
-<div class="container">
-  <div class="wrap">
+<!--=======section top artist=======-->
+<section>
+  <div class="container albums">
     <div class="row">
-      <div class="card-one">
-        <div class="bit-1">
-          <div class="img">1</div>
+      <div class="col-md-6">
+        <div class="box">
+          <div class="img-bloc">
+            <img src="../../../assets/img/img-1.jpg" alt="">
+          </div>
+          <div class="main-content">
+            <h3 class="main-artist">Блок 1</h3>
+            <p class="main-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <a href="" class="btn btn-default btn-one">More</a>
+            <a href="" class="btn btn-default btn-two">More</a>
+          </div>
         </div>
       </div>
-      <div class="card-four row row-wrap">
-        <div class="bit-2">
-          <div class="img">2</div>
+      <div class="col-md-3">
+        <div class="box">
+          <div class="img-bloc">
+            <img src="../../../assets/img/img-2.jpg" alt="">
+            <div class="img-bloc-content">
+              <h3 class="artist">Блок 2</h3>
+              <p class="description">ng elit.</p>
+            </div>
+          </div>
         </div>
-        <div class="bit-2">
-          <div class="img">3</div>
+        <div class="box">
+          <div class="img-bloc">
+            <img src="../../../assets/img/img-4.jpg" alt="">
+            <div class="img-bloc-content">
+              <h3 class="artist">Блок 4</h3>
+              <p class="description">Lorem</p>
+            </div>
+          </div>
         </div>
-        <div class="bit-2">
-          <div class="img">4</div>
-        </div>
-        <div class="bit-2">
-          <div class="img">5</div>
+      </div>
+      <div class="col-md-3">
+        <div class="box">
+          <div class="img-bloc">
+            <img src="../../../assets/img/img-3.jpg" alt="">
+            <div class="img-bloc-content">
+              <h3 class="artist">Блок 3</h3>
+              <p class="description">Lorem</p>
+            </div>
+          </div>
+          <div class="img-bloc">
+            <img src="../../../assets/img/img-5.jpg" alt="">
+            <div class="img-bloc-content">
+              <h3 class="artist">Блок 5</h3>
+              <p class="description">Lorem</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
+<!--=======END section top artist=======-->
 
-<div class="container">
-  <div class="wrap">
+<!--=======section top=======-->
+<section>
+  <div class="container albums">
     <div class="row">
-      <div class="card-line row">
-        <div class="bit-3">
-          <div class="img">2</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">3</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">4</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">5</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">5</div>
-        </div>
+      <div class="col-md-12">
+        <ul>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-1.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-1.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-1.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-1.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-1.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-</div>
+</section>
+<!--=======END section top=======-->
 
-<div class="container">
-  <div class="wrap">
+<!--=======section top=======-->
+<section>
+  <div class="container albums">
     <div class="row">
-      <div class="card-line row">
-        <div class="bit-3">
-          <div class="img">2</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">3</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">4</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">5</div>
-        </div>
-        <div class="bit-3">
-          <div class="img">5</div>
-        </div>
+      <div class="col-md-12">
+        <ul>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-4.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-4.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-4.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-4.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="img-bloc-top">
+              <img src="../../../assets/img/img-4.jpg" alt="">
+              <div class="img-bloc-content-top">
+                <h3 class="artist-top">Блок 3</h3>
+                <p class="description-top">Lorem</p>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-</div>
+</section>
+<!--=======END section top=======-->
+
+
+
+<!--<div class="container">-->
+  <!--<div class="wrap">-->
+    <!--<div class="row">-->
+      <!--<div class="card-one">-->
+        <!--<div class="bit-1">-->
+          <!--<div class="img">1</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<div class="card-four row row-wrap">-->
+        <!--<div class="bit-2">-->
+          <!--<div class="img">2</div>-->
+        <!--</div>-->
+        <!--<div class="bit-2">-->
+          <!--<div class="img">3</div>-->
+        <!--</div>-->
+        <!--<div class="bit-2">-->
+          <!--<div class="img">4</div>-->
+        <!--</div>-->
+        <!--<div class="bit-2">-->
+          <!--<div class="img">5</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<!--<div class="container">-->
+  <!--<div class="wrap">-->
+    <!--<div class="row">-->
+      <!--<div class="card-line row">-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">2</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">3</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">4</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">5</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">5</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
+
+<!--<div class="container">-->
+  <!--<div class="wrap">-->
+    <!--<div class="row">-->
+      <!--<div class="card-line row">-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">2</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">3</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">4</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">5</div>-->
+        <!--</div>-->
+        <!--<div class="bit-3">-->
+          <!--<div class="img">5</div>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</div>-->
