--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -1,3 +1,42 @@
+<!--<section>-->
+
+  <!--&lt;!&ndash;<div class="modal-header">&ndash;&gt;-->
+    <!--&lt;!&ndash;<h4 class="modal-title">Modal title</h4>&ndash;&gt;-->
+    <!--&lt;!&ndash;<button type="button" class="close" aria-label="Close" (click)="d('Cross click')">&ndash;&gt;-->
+      <!--&lt;!&ndash;<span aria-hidden="true">&times;</span>&ndash;&gt;-->
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!--&lt;!&ndash;<div class="modal-body">&ndash;&gt;-->
+    <!--&lt;!&ndash;<p>One fine body&hellip;</p>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!--&lt;!&ndash;<div class="modal-footer">&ndash;&gt;-->
+    <!--&lt;!&ndash;<button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>&ndash;&gt;-->
+  <!--&lt;!&ndash;</div>&ndash;&gt;-->
+  <!---->
+  <!--<div class="login-btn">-->
+    <!--<a href="#" class="button" data-toggle="modal" data-target="#login-modal">Login</a>-->
+  <!--</div>-->
+
+  <!--<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">-->
+    <!--<div class="modal-dialog">-->
+      <!--<div class="loginmodal-container">-->
+        <!--<h1>Login to Your Account</h1><br>-->
+        <!--<form>-->
+          <!--<input type="text" name="user" placeholder="Username">-->
+          <!--<input type="password" name="pass" placeholder="Password">-->
+          <!--<input type="submit" name="login" class="login loginmodal-submit" value="Login">-->
+        <!--</form>-->
+
+        <!--<div class="login-help">-->
+          <!--<a href="#">Register</a> - <a href="#">Forgot Password</a>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</section>-->
+
+
+
 <section class="login-container">
   <h1>Login to Account</h1><br>
   <form autocomplete="off" novalidate [formGroup]="form" (submit)="login()">
