--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -33,7 +33,7 @@
               <a class="nav-link first" (click)="logout()" [routerLink]="['/']" *ngIf="isLoggedIn">Logout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/signup']" *ngIf="!isLoggedIn">Create account</a>
+              <a class="nav-link" [routerLink]="['/register']" *ngIf="!isLoggedIn">Create account</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link">En</a>
