--- a/src/app/component/auth/login/login.component.html
+++ b/src/app/component/auth/login/login.component.html
@@ -39,6 +39,14 @@
 
 <section class="login-container">
   <h1>Login to Account</h1><br>
+
+  <ul>
+    <li><i class="fa fa-facebook"></i><a (click)="loginWithFacebook()" class="button-social button-facebook">Continue with Facebook</a></li>
+    <li><i class="fa fa-google"></i><a (click)="loginWithGoogle()" class="button-social button-google">Continue with Google</a></li>
+  </ul>
+
+  <p class="text-or">OR</p>
+
   <form autocomplete="off" novalidate [formGroup]="form" (submit)="login()">
     <input type="email" name="user" placeholder="E-mail" formControlName="email">
     <input type="password" name="pass" placeholder="Password" formControlName="password">
@@ -46,15 +54,14 @@
   </form>
 
   <div class="login-help">
-    <a href="#">Register</a> - <a href="#">Forgot Password</a>
+    <a href="/register">Register</a> - <a href="/reset-password">Forgot Password</a>
   </div>
-  <div class="login-help">
-    <button (click)="loginWithGoogle()">Login with Google</button>
-  </div>
+  <!--<div class="login-help">-->
+    <!--<button (click)="loginWithGoogle()">Login with Google</button>-->
+  <!--</div>-->
 </section>
 
-<a (click)="loginWithGoogle()" class="button button-google">Sign In with Google</a>
-<a (click)="loginWithFacebook()" class="button">Sign In with Facebook</a>
+
 
 <a href="https://www.facebook.com/v3.0/dialog/oauth?
   client_id=615550948797320&
